# inkerface-client-cpp

./: .gitignore  CMakeLists.txt  main.cpp  utils.cpp  utils.h
ethereum/: CMakeLists.txt  Common.cpp  Dagger.cpp  PeerNetwork.cpp  State.cpp
